added cards to board

--- a/index.html
+++ b/index.html
@@ -9,13 +9,34 @@
       .container {
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
+      }
+      .container #board {
+        display: flex;
+        justify-content: center;
+      }
+      .board {
+        background-color: beige;
+        border: 10px royalblue solid;
+        border-radius: 10px;
+        width: 30%;
+      }
+      .card {
+        width: 120px;
+        height: 150px;
+        background-color: cornflowerblue;
+        border-radius: 10px;
+        border: 2px grey solid;
+        margin: 5px;
       }
     </style>
   </head>
   <body>
-    <span class="container"
-      ><h1><u>Memory Game</u></h1></span
-    >
+    <div class="container">
+      <h1><u>Memory Game</u></h1>
+    </div>
+    <div id="board" class="container board"></div>
+
     <script src="main.js"></script>
   </body>
 </html>
