--- a/index.html
+++ b/index.html
@@ -5,37 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Game</title>
-    <style>
-      .container {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-      }
-      .container #board {
-        display: flex;
-        justify-content: center;
-      }
-      .board {
-        background-color: beige;
-        border: 10px royalblue solid;
-        border-radius: 10px;
-        width: 30%;
-      }
-      .card {
-        width: 120px;
-        height: 150px;
-        background-color: cornflowerblue;
-        border-radius: 10px;
-        border: 2px grey solid;
-        margin: 5px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1><u>Memory Game</u></h1>
-    </div>
-    <div id="board" class="container board"></div>
+    <!-- <div class="container"> -->
+    <h1><u>Memory Game</u></h1>
+    <div id="board" class="container"></div>
+    <!-- </div> -->
 
     <script src="main.js"></script>
   </body>
