--- a/index.html
+++ b/index.html
@@ -9,11 +9,73 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="fireworks.scss" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1><u>Memory Game</u></h1>
-    <div id="board" class="container d-flex p-3"></div>
+    <h1 style="margin-left: 590px"><u>Memory Game</u></h1>
+    <br />
+    <div id="players" class="container-fluid">
+      <div class="row justify-content-center">
+        <div id="activePlayer" class="col-12 d-flex justify-content-center">
+          <h2>Enter player's names</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-2 d-flex justify-content-center">
+          <img name="player" src="./Images/p1.JPG" />
+        </div>
+        <div class="col-2 d-flex justify-content-center">
+          <img name="player" src="./Images/p2.JPG" />
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-2 d-flex justify-content-center">
+          <input
+            id="player1"
+            class="form-control"
+            placeholder="Enter first player's name"
+            onfocusout="checkNames()"
+            oninput="checkNames()"
+          />
+        </div>
+        <div class="col-2 d-flex justify-content-center">
+          <input
+            id="player2"
+            class="form-control"
+            placeholder="Enter second player's name"
+            onfocusout="checkNames()"
+            oninput="checkNames()"
+          />
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-2 d-flex justify-content-center">
+          <h6>Pairs:</h6>
+          <label id="p1Pairs"> 0</label>
+        </div>
+        <div class="col-2 d-flex justify-content-center">
+          <h6>Pairs:</h6>
+          <label id="p2Pairs"> 0</label>
+        </div>
+      </div>
+      <br />
+      <div class="row justify-content-center">
+        <button
+          type="button"
+          class="btn btn-outline-primary"
+          disabled
+          id="startGame"
+          onclick="init()"
+        >
+          Let's Go!
+        </button>
+      </div>
+      <br />
+    </div>
+    <br />
+
+    <div id="board" class="container d-flaex p-3" hidden></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
